--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section>
             <h2>Sobre a ONG</h2>
             <p>Bem-vindo à nossa plataforma! Aqui você pode conhecer nossos projetos, se cadastrar como voluntário ou apoiar com doações.</p>
-            <img src="img/acao-social.jpg" alt="Ação Social" style="max-width:100%; height:auto; margin-top:10px;">
+            <img src="img/acao-social.jpg" alt="Ação Social">
         </section>
         <section>
             <h2>Contato</h2>
@@ -35,4 +35,5 @@
     </footer>
 </body>
 </html>
+
 
