--- a/cadastro.html
+++ b/cadastro.html
@@ -20,20 +20,48 @@
     <main>
         <section>
             <h2>Cadastro de Voluntário</h2>
-            <form>
+            <form action="#" method="post">
                 <fieldset>
-                    <label for="nome">Nome:</label>
-                    <input type="text" id="nome" name="nome">
-                </fieldset>
-                <fieldset>
+                    <legend>Informações Pessoais</legend>
+                    <label for="nome">Nome completo:</label>
+                    <input type="text" id="nome" name="nome" required><br><br>
+
+                    <label for="cpf">CPF:</label>
+                    <input type="text" id="cpf" name="cpf" required><br><br>
+
+                    <label for="data">Data de nascimento:</label>
+                    <input type="date" id="data" name="data" required><br><br>
+
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email">
-                </fieldset>
-                <fieldset>
+                    <input type="email" id="email" name="email" required><br><br>
+
                     <label for="telefone">Telefone:</label>
-                    <input type="tel" id="telefone" name="telefone">
+                    <input type="tel" id="telefone" name="telefone" required><br><br>
+
+                    <label for="endereco">Endereço:</label>
+                    <input type="text" id="endereco" name="endereco"><br><br>
+
+                    <label for="senha">Senha:</label>
+                    <input type="password" id="senha" name="senha" required><br><br>
                 </fieldset>
-                <button type="submit">Enviar</button>
+
+                <fieldset>
+                    <legend>Preferências</legend>
+                    <label for="area">Área de interesse:</label>
+                    <select id="area" name="area">
+                        <option value="educacao">Educação</option>
+                        <option value="saude">Saúde</option>
+                        <option value="meioambiente">Meio Ambiente</option>
+                        <option value="outros">Outros</option>
+                    </select><br><br>
+
+                    <label>Disponibilidade:</label><br>
+                    <input type="checkbox" name="disponibilidade" value="manha"> Manhã<br>
+                    <input type="checkbox" name="disponibilidade" value="tarde"> Tarde<br>
+                    <input type="checkbox" name="disponibilidade" value="noite"> Noite<br><br>
+                </fieldset>
+
+                <button type="submit">Cadastrar</button>
             </form>
         </section>
     </main>
@@ -43,5 +71,6 @@
     </footer>
 </body>
 </html>
+
 
 
